Steuer verbesserung (#833)
* ExtendedDBIterator hinzugefügt

* Buchungsklassen Saldo umgebaut für Steuer

* Steuer View, Steuer Dropdown in Buchungsart, Buchung, Steuer in Listen

* Steuer in Sollbuchungsposition DBUpdate

* Steuermenu, DepencyID entfernt, Steuer in Sollbuchungsposition
angepasst...

* Update Korrigiert, nullchecks eingebaut

* excuteUpdate hinugefügt, fehler query behoben.

* Diagnose Backup für Steuer. Query Buchungsart plausi() korrigiert

* Unnötigen Test entfernt

* PseudoDBObject immer lowercase bezeichnungen verwenden, Aktuallisieren
der Liste kotrrigiert, steuer join nur wenn nötig.

* NPE BuchungsarContoll, Summe nit Zugeordnet in Buchungsklassensaldo

* Buchungsklassensaldo angepasst

* Typos und Having korrigiert

* Summen 0.00 entfernt

* Query für H2 angepasst

* Delete Action korrigiert

* summe Variable korrigiert

* NPE und Typos

* Anlagegut aus Netto erstellen, Bei Auswertungen Anlageimmer brutto
verwenden.

* Kontensaldo umgestellt, Umbuchungen Steueranteil als Ausgabe/Einnahme

* Anlagenverzeichnis umgestellt

* Kein Netto bei alten Steuerbuchungen mit dependencyid

* Beim Update bestehende Steuersätze erstellen. Kontenrahmen Import
Steuern mit anlegen

* Fehler in Kontensaldo und Anlagenliste behoben.

* Iterator bei Anlagenliste und Kontensaldo korrigiert.

* Exceptions behoben

* H2 Fehler behoben

* Fehler Anfangsbestend behoben

* Casts entfernt, DBObject variable vergessen

* Reporte korrigiert

* Steuer bei erstellen einer SOllbuchung aus Buchung übernehmen

* Steuer aus Sollbuchnung übernehmen in BuchungDetailView

* Speichern der Steuer in Buchung in Util verschoben und bei Einstellung
Speichern ausführen

* Neustart Erorderlich in Einstellungen->Buchführung für Optiert
hinzugefügt

* Projektsaldo umgestellt

* Fhler in BuchungsklassenSaldo Query behoben

* Anfang Kontenrahmenimport

* Kontenrahmenimport korrigiert

* Anlagenliste Abfragen reduzieren

* Kontenrahmenimport Fehler behoben

* Bei Projektsaldo "OhneBuchungsa